k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextapp-service
spec:
  type: LoadBalancer
  selector:
    app: nextapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
